Support builds in Micronaut Serialization